--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 .hidden{
      display:none;
 }
-
+body{ background-color: rgb(56, 56, 56);}
 img{
      position:absolute;
      width: 100%;
@@ -20,5 +20,5 @@ img{
      top:0px;
      right:0px;
      z-index: -1;
-     opacity:80%;
+     opacity:45%;
 }
