--- a/css/greeting.css
+++ b/css/greeting.css
@@ -1,3 +1,34 @@
 #login-form input{
+     border:none;
+     padding:3px 0px;
      background-color: transparent;
+     font-size:15px;
+     border-bottom: 3px solid rgba(187, 168, 135,0.8);
+     border-radius: 1px;
+    
+}
+
+
+#login-form input::placeholder{
+     color:rgb(215, 203, 183);
+     text-align: center;
+}
+#login-form input, #login-form button{
+     position: relative;
+     top:-50px;
+}
+#login-form button
+{
+     border:3px solid  rgba(187, 168, 135,1);
+     border-radius: 5px;
+     background-color: rgba(167, 130, 112, 0.25);
+     color:rgba(187, 168, 135,1);
+}
+
+#greeting{
+     position: relative;
+     top:-70px;
+     margin:0px;
+     font-size: 40px;
+     color:rgb(222, 207, 181);
 }
