--- a/css/greeting.css
+++ b/css/greeting.css
@@ -1,10 +1,10 @@
 #login-form input{
      border:none;
-     padding:3px 0px;
+     padding:5px 0px;
      background-color: transparent;
-     font-size:15px;
-     border-bottom: 3px solid rgba(187, 168, 135,0.8);
-     border-radius: 1px;
+     font-size:30px;
+     border-bottom: 6px solid rgba(187, 168, 135,0.8);
+     border-radius: 3px;
     
 }
 
@@ -15,20 +15,22 @@
 }
 #login-form input, #login-form button{
      position: relative;
-     top:-50px;
+     top:-130px;
 }
 #login-form button
 {
-     border:3px solid  rgba(187, 168, 135,1);
-     border-radius: 5px;
+     font-size: 30px;
+     border:5px solid  rgba(187, 168, 135,1);
+     border-radius: 10px;
      background-color: rgba(167, 130, 112, 0.25);
      color:rgba(187, 168, 135,1);
 }
 
 #greeting{
      position: relative;
-     top:-70px;
+     top:-150px;
      margin:0px;
-     font-size: 40px;
-     color:rgb(222, 207, 181);
+     font-size: 80px;
+     color:rgb(235, 223, 203);
+     text-shadow: 3px 3px 2px black;
 }
