--- a/css/music.css
+++ b/css/music.css
@@ -1,11 +1,12 @@
-body > svg{
-    width:40px;
-    height: 40px;
+#music_icon{
+    width:70px;
+    height: 70px;
+    padding: 10px;
     position: absolute;
-    top:50px;
-    color:rgb(67, 255, 208);
-
-    /* 안쓸때는 토글로 color:gray; */
-
-    right: 50px;
+    top:100px;
+    color:white;
+    right: 130px;
+    border: 3px solid white;
+    border-radius: 30px;
 }
+
