--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
 @import url("weather.css");
 @import url("clock.css");
 @import url("music.css");
+@import url("todo.css");
+@import url("quote.css");
+@import url("timer.css");
+
 
 
 *{
@@ -17,13 +21,14 @@
 body{ width: 100%;
      height:100%; 
      margin: 0;
-     background-color: rgb(56, 56, 56);
+     /* background-color: rgb(56, 56, 56); */
+     background-color: rgb(20, 20, 20);
      display: flex;
      flex-direction: column;
     align-items: center;
 
 }
-img{
+.bg{
      position:absolute;
      width: 100%;
      height:100%;
