--- a/css/quote.css
+++ b/css/quote.css
@@ -24,9 +24,10 @@
 }
 
 #quote span:first-child{
+     position: relative;
      font-size: 30px;
-     bottom: 30px;
-     right: 40px;
+     bottom: 10px;
+     right: 10px;
 }
 
 #quote span:last-child{
