--- a/css/greeting.css
+++ b/css/greeting.css
@@ -2,9 +2,11 @@
      border:none;
      padding:5px 0px;
      background-color: transparent;
-     font-size:30px;
+     font-size:40px;
      border-bottom: 6px solid rgba(187, 168, 135,0.8);
      border-radius: 3px;
+     text-align: center;
+     color:rgb(215, 203, 183);
     
 }
 
