--- a/css/timer.css
+++ b/css/timer.css
@@ -87,12 +87,21 @@
      align-items: center;
 }
 #timer-line div{
-     z-index: 90;
-     width: 490px;
+     z-index: 89;
+     width: 460px;
      height: 10px;
-     transform: scaleX(1.1);
+     display: flex;
+     justify-content: flex-end;
+
+}
+#timer-line div div{
+     z-index: 90;
+     width: 430px;
+     height: 10px;
+     transform: scaleX(1.3);
      background-color: transparent;
      border-bottom: 8px dotted rgb(171, 255, 203);
+     transition: all 1s linear;
 }
 
 #neoguri{
